--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="g4b1nagy">
     <meta property="og:image" content="http://TODO">
     <link rel="icon" type="image/png" href="img/TODO.png">
-    <style type="text/css">
+    <style>
       html, body, #map-canvas {
         margin: 0;
         padding: 0;
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="map-canvas"></div>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key= API KEY &sensor=false&language=en"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key= API KEY &sensor=false&language=en"></script>
+    <script src="script.js"></script>
   </body>
 </html>
