--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="map-canvas"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key= API KEY &sensor=false&language=en"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
     <script src="script.js"></script>
   </body>
 </html>
