--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Maps Javascript API v3 reference</title>
-    <meta name="description" content="TODO">
-    <meta name="author" content="g4b1nagy">
-    <meta property="og:image" content="http://TODO">
-    <link rel="icon" type="image/png" href="img/TODO.png">
-    <style>
-      html, body, #map-canvas {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map-canvas"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
-    <script src="script.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Google Maps Javascript API v3 reference</title>
+        <meta name="description" content="TODO">
+        <meta name="author" content="g4b1nagy">
+        <meta property="og:image" content="http://TODO.png">
+        <link rel="icon" href="img/TODO.png">
+        <style>
+            html, body, #map-canvas {
+                margin: 0;
+                padding: 0;
+                height: 100%;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="map-canvas"></div>
+        <script src="https://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
+        <script src="script.js"></script>
+    </body>
 </html>
